2002-10-02  Brian Lindauer  <lindauer@malkmus.sysdetect.com>

	* lib/b_addrgroup.c (do_net_init_af_inet_udp_listen): Always set
	SO_REUSEADDR when setting to listen on udp.

2002-09-27  Alexander Dupuy  <dupuy@sysdetect.com>

	* include/libbk.h (BK_MAX_SHORT): useless, use USHRT_MAX et al.

	* lib/b_error.c (be_error_append): fix James' bugs while he sleeps

2002-09-27  James Tanis  <jtt@hawking.sysdetect.com>

	* lib/b_error.c (be_error_append): Don't append NEWLINE if last
	char is already a NEWLINE.

2002-09-26  James Tanis  <jtt@hawking.sysdetect.com>

	* include/libbk.h (BK_MAX_SHORT): Add a few constants, which are
	_likely_ to exist on all archs, but let's be sure. 

2002-09-26  Brian Lindauer  <lindauer@malkmus.sysdetect.com>

	* lib/b_run.c (bk_run_enqueue_delta): Fixed small arithmetic error.

2002-09-23  James Tanis  <jtt@hawking.sysdetect.com>

	* lib/b_bnbio.c (bk_iohh_bnbio_read): Only set timeout if one is
	wanted. Remember to clear it if not needed.

2002-09-12  Brian Lindauer  <lindauer@malkmus.sysdetect.com>

	* lib/b_time.c (bk_time_iso_format): Fixed minor bug in BK_TIME_FORMAT_FLAG_NO_TZ.

2002-09-12  James Tanis  <jtt@hawking.sysdetect.com>

	* lib/b_run.c (bk_run_set_dont_block_run_once): Add flag so that
	asynchronous events can cause the current bk_run_once() not to
	block, just as callers of bk_run_once() may with
	BK_RUN_ONCE_FLAG_DONT_BLOCK. 

2002-09-10  James Tanis  <jtt@saint.sysdetect.com>

	* lib/b_run.c (bk_run_checkeventq): Don't allow bk_run_once to
	block if one or more events have fired in this iteration.

	* lib/b_bnbio.c (bk_iohh_bnbio_read): Allow time outs.
	(bnbio_set_timeout): Set/clear the timeout event.
	(bnbio_timeout): time out callback.
	(bk_iohh_bnbio_is_timedout): Is this bnbio struct in timeout state
	(bk_iohh_bnbio_is_canceled): Is this bnbio struct in cancelled state

2002-09-06  James Tanis  <jtt@saint.sysdetect.com>

	* lib/b_strcode.c (bk_string_str2xml): Allow non-printable