@@ -1,5 +1,5 @@
 #if !defined(lint) && !defined(__INSIGHT__)
-static const char libbk__rcsid[] = "$Id: b_bnbio.c,v 1.14 2002/09/24 00:20:48 jtt Exp $";
+static const char libbk__rcsid[] = "$Id: b_bnbio.c,v 1.15 2002/10/04 21:11:43 jtt Exp $";
 static const char libbk__copyright[] = "Copyright (c) 2001";
 static const char libbk__contact[] = "<projectbaka@baka.org>";
 #endif /* not lint */
@@ -152,7 +152,7 @@ bk_iohh_bnbio_read(bk_s B, struct bk_iohh_bnbio *bib, bk_vptr **datap, time_t ti
   BK_FLAG_CLEAR(bib->bib_flags, BK_IOHH_BNBIO_FLAG_TIMEDOUT);
 
   // first, generate *some* form of useful information
-  while (BK_FLAG_ISCLEAR(bib->bib_flags, BK_IOHH_BNBIO_FLAG_TIMEDOUT) &&
+  while (!bk_iohh_bnbio_is_timedout(B, bib) &&
 	 (!(is_canceled = bk_iohh_bnbio_is_canceled(B, bib, 0))) && 
 	 ((ret = bk_polling_io_read(B, bib->bib_bpi, datap, &status, 0)) == 1))
     /* void */;
@@ -160,11 +160,11 @@ bk_iohh_bnbio_read(bk_s B, struct bk_iohh_bnbio *bib, bk_vptr **datap, time_t ti
   if (timeout)
     bnbio_set_timeout(B, bib, 0, 0);
 
-  if (BK_FLAG_ISSET(bib->bib_flags, BK_IOHH_BNBIO_FLAG_TIMEDOUT) || is_canceled)
+  if (bk_iohh_bnbio_is_timedout(B, bib) || is_canceled)
   {
     if (is_canceled)
       bk_error_printf(B, BK_ERR_ERR, "Blocking NBIO read aborted by external request\n");
-      
+
     BK_RETURN(B, -1);
   }
 
