@@ -1,3 +1,10 @@
+2002-10-04  James Tanis  <jtt@hawking.sysdetect.com>
+
+	* lib/b_run.c (bk_run_once): Do not block in select(2) if an event
+	has fired (ie allow timeouts to works their magic).
+	(bk_run_checkeventq): Optional copyout to return the number of
+	events which have fired in this check.
+
 2002-10-02  Brian Lindauer  <lindauer@malkmus.sysdetect.com>
 
 	* lib/b_addrgroup.c (do_net_init_af_inet_udp_listen): Always set
